Removed left-padding to fix homepage on mobile

--- a/Swim-Coach-App/swim-coach-react-application-bryce-pearson/src/style/auth.scss
+++ b/Swim-Coach-App/swim-coach-react-application-bryce-pearson/src/style/auth.scss
@@ -4,7 +4,7 @@
 	height: 45vh;
 	width: 70vw;
 	margin-top: 25px;
-	margin-left: 434px;
+	// margin-left: 434px;
 
 	.right-side {
 		display: flex;
