--- a/Swim-Coach-App/swim-coach-react-application-bryce-pearson/src/style/navigation.scss
+++ b/Swim-Coach-App/swim-coach-react-application-bryce-pearson/src/style/navigation.scss
@@ -12,7 +12,7 @@
 	.logo-img-wrapper {
 		display: flex;
 		margin-left: 75px;
-		height: 175px;
+		height: 68px;
 	}
 }
 
